Fix styles and list without shifts

--- a/src/schedule/panels/SchedulePanel.scss
+++ b/src/schedule/panels/SchedulePanel.scss
@@ -22,6 +22,9 @@ iqs-schedule-panel {
             }
         }
     }
+    .pip-ref-list-item {
+        cursor: pointer;
+    }
     .pip-content-container pip-document {
         width: 100%!important;
         height: 100%!important;
@@ -35,6 +38,20 @@ iqs-schedule-panel {
         md-datepicker {
             .md-datepicker-input-container {
                 border: 0;
+
+                .md-datepicker-input {
+                    padding: 0 16px 0 0;
+                }
+
+                .md-datepicker-triangle-button {
+                    padding: 0;
+                    margin: 0;
+                    height: 16px;
+                    width: 16px;
+                    min-height: 16px;
+                    top: 0;
+                    right: 8px;
+                }
             }
         }
     }
